Second pass of refactoring